# lmstudio-agent-config

./: .gitignore  LICENSE  README.md  pyproject.toml
.agent/skills/git-preflight-checks/: SKILL.md
.agent/skills/git-preflight-checks/agents/: openai.yaml
.github/workflows/: ci.yml  publish-testpypi.yml
lmstudio_agent_config/: cli.py  files.py  generators.py  models.py  paths.py  render.py  utils.py
tests/: test_files.py  test_generators.py  test_models.py  test_paths.py  test_utils.py
