[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lmstudio-agent-config"
version = "0.1.2"
description = "Generate and update agent config files from LM Studio models for VS Code Copilot, OpenCode, Pi, and Codex."
readme = "README.md"
requires-python = ">=3.12"
license-files = ["LICENSE"]
authors = [{ name = "Alessandro Bologna", email = "alessandro.bologna@gmail.com" }]
keywords = [
  "lmstudio",
  "local-llm",
  "openai-compatible-api",
  "agent-config",
  "codex",
  "copilot",
  "opencode",
  "pi-agent",
  "cli",
  "developer-tools",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
]
dependencies = [
  "requests",
  "click",
  "click-help-colors",
  "json5",
  "rich",
  "tomli-w",
  "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "tomli",
  "ty",
]

[project.scripts]
lmstudio-agent-config = "lmstudio_agent_config.cli:main"

[project.urls]
Homepage = "https://github.com/alessandrobologna/lmstudio-agent-config"
Repository = "https://github.com/alessandrobologna/lmstudio-agent-config"
Issues = "https://github.com/alessandrobologna/lmstudio-agent-config/issues"

[tool.setuptools.packages.find]
include = ["lmstudio_agent_config"]
